--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Departments#index</h1>
-<p>Find me in app/views/departments/index.html.erb</p>
+<h1> Departments </h1>
+
+<ul>
+  <% @departments.each do |department| %>
+  <li> <%= department.name %> </li>
+  <% end %>
+</ul>
