created department destroy method and create departments link in the department index

--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,2 +1,6 @@
 <h1> <%= @department.name %> </h1>
-<p> <%= link_to "Edit", edit_department_path(@department) %> </p>
+<p> 
+  <%= link_to "Edit", edit_department_path(@department) %> 
+  <%= " " %>
+  <%= link_to "Delete", @department, method: :delete %>
+</p>
